tests/expectations/compiler/function/unknown_parameter_type_fail.out
Error [ETYC0372017]: The type `test.aleo/Foo` is not found in the current scope.
    --> compiler-test:3:20
     |
   3 |     fn main(a: u8, foo: Foo) -> u8 {
     |                    ^^^^^^^^
     |
     = If you are using an external type, make sure to preface with the program name. Ex: `credits.aleo/credits` instead of `credits`
Error [ETYC0372017]: The type `test.aleo/Foo` is not found in the current scope.
    --> compiler-test:7:30
     |
   7 |     fn returns_foo(a: u8) -> Foo {
     |                              ^^^
     |
     = If you are using an external type, make sure to preface with the program name. Ex: `credits.aleo/credits` instead of `credits`
Error [ETYC0372117]: Expected type `test.aleo/Foo` but type `u8` was found.
    --> compiler-test:8:16
     |
   8 |         return a;
     |                ^
